--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,8 +1,14 @@
 app {
   http {
     host = "0.0.0.0"
-    port = 8080
+    port = 3000
     timeout = 40 seconds
+  }
+
+  one-frame {
+    host = "http://localhost:8080"
+    path = "/rates"
+    fetch-interval = 120 seconds
   }
 }
 
