--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,13 +1,14 @@
 app {
   http {
     host = "0.0.0.0"
-    port = 3000
+    port = 8080
     timeout = 40 seconds
   }
 
   one-frame {
-    host = "http://localhost:8080"
+    host = "http://localhost:8081"
     path = "/rates"
+    token = "10dc303535874aeccc86a8251e6992f5"
     fetch-interval = 120 seconds
   }
 }
