implemented all functions

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -9,7 +9,7 @@ app {
     host = "http://localhost:8081"
     path = "/rates"
     token = "10dc303535874aeccc86a8251e6992f5"
-    fetch-interval = 120 seconds
+    seconds-between-call = 90 seconds
   }
 }
 
